--- a/projekt.html
+++ b/projekt.html
@@ -114,10 +114,10 @@
             
           
             <div class="fi">
-            <div class="label" for="newsletter">
+            <diV class="label" for="newsletter">
                 <span>Sign Up for Our Newsletter:</span>
 
-            </div>
+            </diV>
 
             <div class="control">
 
