--- a/Regjistrimi/Register.html
+++ b/Regjistrimi/Register.html
@@ -11,6 +11,12 @@
 
 </head>
 <body>
+  <div class="Banner">
+    <h3>WARNING: The Items in our Shop contain nicotine
+      Nicotine is an Addictive chemical.!
+    </h3>
+  </div>
+
   <div class="Titull">
   <h1>Sign Up </h1>
   </div>
@@ -65,8 +71,19 @@
     <input type="submit" onclick="validateForm()" class="Regjistrohu" value="Sign Up">
  
   </div>
+
 </div>
   </form>
+  <div class="Copyright">
+    <h3>Copyright 2023 The Goat Vape Company. All rights reserved.  </h3>
+    <h3>Designed by Ubejd and Ilmi</h3>
+</div>
+<hr>
+
+
+<div class="Fund">
+<h3>Not for Sale for Minors - Products sold on this site may contain nicotine which is a highly addictive substance. California Proposition 65 - WARNING: This product can expose you to chemicals including nicotine, which is known to the State of California to cause birth defects or other reproductive harm. For more information, go to Proposition 65 Warnings Website. Products sold on this site is intended for adult smokers. You must be of legal smoking age in your territory to purchase products. Please consult your physician before use. E-Juice on our site may contain Propylene Glycol and/or Vegetable Glycerin, Nicotine and Flavorings. Our products may be poisonous if orally ingested. FDA DISCLAIMER: The statements made regarding these products have not been evaluated by the Food and Drug Administration. The efficacy of these products has not been confirmed by FDA-approved research. These products are not intended to diagnose, treat, cure or prevent any disease. All information presented here is not meant as a substitute for or alternative to information from health care practitioners. For their protection, please keep out of reach of children and pets. Read our terms and conditions page before purchasing our products. Use All Products On This Site At Your Own Risk!</h3>
+</div>
 
     
   
