--- a/page of sell/PajisjetNeShitje.html
+++ b/page of sell/PajisjetNeShitje.html
@@ -3,11 +3,16 @@
 <html>
 <head>
 <title>Home Page</title>
-<link rel="stylesheet" href="detyre.css">
+<link rel="stylesheet" href="PajisjetNeShitje.css">
 </head>
 <body>
 
-    
+    <div class="Banner">
+        <h3>WARNING: The Items in our Shop contain nicotine
+          Nicotine is an Addictive chemical.!
+        </h3>
+      </div>
+      
         <div class="backgroundPIC">
            <fieldset disabled="disabled"></fieldset>
             <H1>Login Page</H1>
