--- a/Regjistrimi/Register.html
+++ b/Regjistrimi/Register.html
@@ -11,6 +11,10 @@
 
 </head>
 <body>
+  <div class="navbar">
+    <a href="C:\Users\ilmia\Desktop\ubejd\Detyre\projekt\log in\Log in.html">Log In</a>
+   
+</div>
   <div class="Banner">
     <h3>WARNING: The Items in our Shop contain nicotine
       Nicotine is an Addictive chemical.!
