--- a/log in/Log in.html
+++ b/log in/Log in.html
@@ -11,6 +11,12 @@
 
 </head>
 <body>
+  <div class="navbar">
+    <a href="C:\Users\ilmia\Desktop\ubejd\Detyre\projekt\about us\aboutus.html">About Us</a>
+    <a href="C:\Users\ilmia\Desktop\ubejd\Detyre\projekt\home page\projekt.html">Home Page</a>
+    <a href="C:\Users\ilmia\Desktop\ubejd\Detyre\projekt\page of sell\PajisjetNeShitje.html">Selling Page</a>
+   
+</div>
 
   <div class="Banner">
     <h3>WARNING: The Items in our Shop contain nicotine
@@ -53,6 +59,12 @@
 </div>
 </div>
 </form>
+  <div class="Register">
+    <a href="C:\Users\ilmia\Desktop\ubejd\Detyre\projekt\Regjistrimi\Register.html"><button class="button-wr"> Register</button>
+    </a>
+  </div>
+
+  
 <div class="Copyright">
   <h3 id=" left">Copyright 2023 The Goat Vape Company. All rights reserved.  </h3>
   <h3 id="rights">Designed by Ubejd and Ilmi</h3>
